--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="http://localhost:4200/">
@@ -12,13 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="http://localhost:4200/listar">Afiliados</a>
+          <a class="nav-link active" aria-current="page" href="http://localhost:4200/lis">Afiliados</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="http://localhost:4200/listarPen">Pensionados</a>
+          <a class="nav-link active" href="http://localhost:4200/list-pensionados">Pensionados</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="http://localhost:4200/listarExc">Excluidos</a>
+          <a class="nav-link active" aria-current="page" href="http://localhost:4200/list-excluidos">Excluidos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" class="btn btn-warning" aria-current="page" href="http://localhost:4200/register" >Regístrate</a>
@@ -31,3 +41,6 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+
+</body>
